--- a/package.json
+++ b/package.json
@@ -58,11 +58,14 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.1.0",
     "antd": "^3.22.1",
     "axios": "^0.19.0",
     "class-transformer": "^0.2.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.10",
     "react-redux": "^7.1.0-rc.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.0.1",
