--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
+    "@types/yup": "^0.28.0",
     "antd": "^3.22.1",
     "axios": "^0.19.0",
     "class-transformer": "^0.2.3",
@@ -69,6 +70,7 @@
     "react-redux": "^7.1.0-rc.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "yup": "^0.28.5"
   }
 }
